--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 #logo-main {
     display: block;
-    margin: 20px auto;
+    margin: 5px auto;
   }
 
 .jumbotron {
     background-position: center;
-    /* background-image: url("img/hero2.jpg"); */
     background-color: white;
     background-size: cover;
     height: 100vh;
@@ -20,4 +19,14 @@
 .card-img-top {
     border-radius: 0;
     border: none;
+}
+
+.nav-item {
+    text-transform: uppercase;
+}
+
+.navbar {
+    width: 70%;
+    margin: auto;
+    border-bottom: 1px solid gray;
 }
