--- a/style.css
+++ b/style.css
@@ -85,3 +85,20 @@ h2 {
 h5 {
     color: black;
 }
+
+/* ---------  CONTACT  --------- */
+#contact {
+    background-color: #f2f2f2;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #c2c2d6;
+    border-color: #9494b8;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #9494b8;
+    border-color: #9494b8;
+}
