--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h2 {
 
 /* ---------  TESTIMONIALS  --------- */
 
-.carousel {
+/* .carousel {
     width: 70%;
     margin: auto;
     background-position: center;
@@ -87,7 +87,7 @@ h2 {
 
 h5 {
     color: black;
-}
+} */
 
 /* ---------  CONTACT  --------- */
 #contact {
@@ -106,77 +106,38 @@ h5 {
     border-color: #9494b8;
 }
 
-.testimonials {
-    overflow: hidden;
-    position: relative;
-    max-height: 300px;
+/* ---------  TESTIMONIALS  --------- */
+
+.carousel-item {
+    padding-bottom: 3rem;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  background-image: none;
+}
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 35px;
+  color: black;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 35px;
+  color: black;
+}
+
+.carousel-indicators li {
+    /* width: 10px;
+    height: 10px;
+    border-radius: 100%;  */
+    background-color: black;
   }
   
-  .testimonials {
-    background: #161d25;
-  }
-  
-  .one-slide,
-  .testimonial,
-  .message {
-    border: none !important;
-    outline: none !important;
-  }
-  
-  .icon-overlay {
-    position: absolute;
-    opacity: 0.3;
-    right: 10%;
-    top: 0;
-    height: auto;
-    width: 100%;
-    max-width: 400px;
-  }
-  
-  .carousel-controls .control {
-    position: absolute;
-    transform: translateY(-50%);
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    border: 2px solid #fff;
-    z-index: 1;
-  }
-  
-  .prev {
-    left: -2.25rem;
-  }
-  
-  .next {
-    right: -2.25rem;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .testimonials {
-      max-height: 700px;
-    }
-    .icon-overlay {
-      height: 300px;
-      top: calc(50% - 150px);
-    }
-    .carousel-controls .control {
-      width: 25px;
-      height: 25px;
-      top: inherit;
-    }
-    .prev {
-      left: 0;
-    }
-    .next {
-      right: 0;
-    }
-    .control i {
-      font-size: .7rem;
-    }
-    .testimonials .message {
-      font-size: 1rem;
-    }
-    .testimonials h2 {
-      font-size: 1.5rem;
-    }
-  }
