--- a/style.css
+++ b/style.css
@@ -73,47 +73,8 @@ h2 {
 
 /* ---------  TESTIMONIALS  --------- */
 
-/* .carousel {
-    width: 70%;
-    margin: auto;
-    background-position: center;
-    background-color: white;
-    background-size: cover;
-}
-
-.carousel-caption {
-    padding-bottom: 100px;
-}
-
-.carousel-caption p {
-    color: black;
-}
-
-h5 {
-    color: black;
-} */
-
-/* ---------  CONTACT  --------- */
-#contact {
-    background-color: #f2f2f2;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #c2c2d6;
-    border-color: #9494b8;
-}
-
-.btn-primary:hover {
-    color: #fff;
-    background-color: #9494b8;
-    border-color: #9494b8;
-}
-
-/* ---------  TESTIMONIALS  --------- */
-
 .carousel-item {
-    padding-bottom: 3rem;
+    padding: 3rem;
 }
 
 .carousel-control-prev-icon,
@@ -123,6 +84,14 @@ h5 {
   outline: black;
   background-size: 100%, 100%;
   background-image: none;
+}
+
+.carousel-control-prev-icon {
+    padding-right: 3rem;
+}
+
+.carousel-control-next-icon {
+    padding-left: 3rem;
 }
 
 .carousel-control-next-icon:after
@@ -144,4 +113,29 @@ h5 {
     border-radius: 100%;  */
     background-color: black;
   }
-  
+
+/* ---------  CONTACT  --------- */
+#contact {
+    background-color: #f2f2f2;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #c2c2d6;
+    border-color: #9494b8;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #9494b8;
+    border-color: #9494b8;
+}
+
+@media screen and (min-width: 570px) {
+    /* ---------  TESTIMONIALS  --------- */
+
+
+
+@media screen and (min-width: 770px) {
+    /* ---------  TESTIMONIALS  --------- */
+
