added pt-6 custom styles to css to enable more padding to select section so that neavbar does not cover the h2 title

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
 h2 {
     font-family: 'Italianno', cursive;
     font-weight: lighter;
+    /* padding-top: 150px; */
+}
+
+.pt-6 {
+    padding-top: 150px;
 }
 
 /* ---------  NAV BAR --------- */
