--- a/style.css
+++ b/style.css
@@ -57,15 +57,23 @@ h2 {
 }
 
 /* ---------  SERVICES  --------- */
+/* a {
+    background-color: #c2c2d6;
+} */
 
 .btn {
     border-radius: 0;
     text-transform: uppercase;
 }
 
+.btn-success {
+    color: #fff;
+    background-color: #c2c2d6;
+    border-color: #c2c2d6;
+  }
+
 .btn-outline-success {
     color: #fff;
-    /* background-color: #9494b8; */
     background-color: #c2c2d6;
     border-color: #9494b8;
   }
