--- a/style.css
+++ b/style.css
@@ -84,6 +84,19 @@ h2 {
     border-color: #9494b8;
   }
 
+  .btn-primary {
+    color: #fff;
+    background-color: #c2c2d6;
+    border-color: #9494b8;
+  }
+
+  .btn-primary:hover {
+    color: #fff;
+    background-color: #c2c2d6;
+    border-color: #9494b8;
+  }
+
+
 /* ---------  TESTIMONIALS  --------- */
 #testimonials {
     height: 75vh;
