--- a/style.css
+++ b/style.css
@@ -57,26 +57,17 @@ h2 {
 }
 
 /* ---------  SERVICES  --------- */
-/* a {
-    background-color: #c2c2d6;
-} */
-
 .btn {
     border-radius: 0;
     text-transform: uppercase;
 }
-
-.btn-success {
-    color: #fff;
-    background-color: #c2c2d6;
-    border-color: #c2c2d6;
-  }
 
 .btn-outline-success {
     color: #fff;
     background-color: #c2c2d6;
     border-color: #9494b8;
   }
+
   
 .btn-outline-success:hover {
     color: #fff;
@@ -84,18 +75,54 @@ h2 {
     border-color: #9494b8;
   }
 
-  .btn-primary {
+.btn-outline-success:focus, 
+.btn-outline-success.focus {
+    box-shadow: 0 0 0 0.2rem rgba(194, 194, 214, 0.5);
+  }
+
+  .btn-outline-success.disabled, 
+  .btn-outline-success:disabled {
+    color: #c2c2d6;
+    background-color: transparent;
+  }
+
+  .btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success:not(:disabled):not(.disabled).active,
+.show > .btn-outline-success.dropdown-toggle {
+  color: #fff;
+  background-color: #c2c2d6;
+  border-color: #c2c2d6;
+}
+
+.btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
+.show > .btn-outline-success.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(194, 194, 214, 0.5);
+}
+
+
+.btn-primary {
     color: #fff;
     background-color: #c2c2d6;
     border-color: #9494b8;
-  }
+}
 
-  .btn-primary:hover {
+.btn-primary:hover {
     color: #fff;
     background-color: #c2c2d6;
     border-color: #9494b8;
-  }
+}
 
+.btn-primary.disabled, .btn-primary:disabled {
+    color: #fff;
+    background-color: #c2c2d6;
+    border-color: #9494b8;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+.show > .btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #c2c2d6;
+    border-color: #9494b8;
+}
 
 /* ---------  TESTIMONIALS  --------- */
 #testimonials {
