--- a/style.css
+++ b/style.css
@@ -225,8 +225,8 @@ h4 {
 }
 
 .carousel-indicators li {
-    /* width: 10px;
-    height: 10px;
+    width: 10px;
+   /* height: 10px;
     border-radius: 100%;  */
     background-color: black;
   }
