--- a/style.css
+++ b/style.css
@@ -147,6 +147,73 @@ h4 {
   box-shadow: 0 0 0 0.2rem rgba(194, 194, 214, 0.5);
 }
 
+/* -------- MODAL SECTION ---------- */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+  
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    text-align: center;
+}
+
+.modal-header {
+    text-align: center;
+    margin: auto;
+}
+
+.modal-footer {
+    text-align: center;
+    margin: auto;
+}
+
+/* The Close Button */
+.closeOne, .closeTwo, .closeThree {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.closeOne:hover,
+.closeOne:focus {
+color: #737373;
+text-decoration: none;
+cursor: pointer;
+}
+
+.closeTwo:hover,
+.closeTwo:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
+}
+
+.closeThree:hover,
+.closeThree:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
+}
+
+.modal-header h2 {
+    color: black;
+}
+
 /* ---------  GALLERY  --------- */
 #gallery {
     background-position: center;
