--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
     font-family: sorts-mill-goudy,serif;
     color: #737373;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     
 }
 
 h2 {
     font-family: 'Italianno', cursive;
     font-weight: lighter;
-    /* padding-top: 150px; */
+    /* padding-top: 100px; */
 }
 
 /* .pt-6 {
@@ -43,8 +43,10 @@ h2 {
     background-position: center;
     background-color: white;
     background-size: cover;
-    /* padding-top: 175px; */
+    padding-top: 150px;
 }
+
+.jumbotron-fluid {}
 
 .card {
     border-radius: 0;
@@ -351,7 +353,7 @@ span {
     }
 
     .jumbotron {
-        height: 40vh;
+        height: 70vh;
     }
     #testimonials {
         height: 75vh;
