--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ span {
 
 /* ---------  TESTIMONIALS  --------- */
 #testimonials {
-    height: 100vh;
+    height: 60vh;
     margin: auto;
 }
 
@@ -359,9 +359,9 @@ span {
     h4 {
         font-size: 1.4rem;
     }
-    #testimonials {
-        height: 75vh;
-    }
+    /* #testimonials {
+        height: 60vh;
+    } */
     #testimonials > h2 {
         font-size: 72px;
     }
@@ -389,5 +389,8 @@ span {
     .modal {
         margin-top: 0px;
     }
+    /* #testimonials {
+        height: 60vh;
+    } */
 }
 
