--- a/style.css
+++ b/style.css
@@ -189,8 +189,7 @@ h4 {
     color: #fff;
     background-color: #c2c2d6;
     border-color: #9494b8;
-    margin: 0;
-    padding: 0;
+    display:inline-block
 }
 
 .modal-btn:hover{}
