--- a/style.css
+++ b/style.css
@@ -1,19 +1,13 @@
 body {
     font-family: sorts-mill-goudy,serif;
     color: #737373;
-    /* padding-top: 100px; */
     
 }
 
 h2 {
     font-family: 'Italianno', cursive;
     font-weight: lighter;
-    /* padding-top: 100px; */
 }
-
-/* .pt-6 {
-    padding-top: 150px;
-} */
 
 /* ---------  NAV BAR --------- */
 
@@ -73,15 +67,15 @@ h4 {
 
 .btn-outline-success {
     color: #fff;
-    background-color: #c2c2d6;
-    border-color: #9494b8;
+    background-color: #e0dcd3;
+    border-color: #e0dcd3;
 }
 
   
 .btn-outline-success:hover {
     color: #fff;
-    background-color: #9494b8;
-    border-color: #9494b8;
+    background-color: #d9d4c7;
+    border-color: #d9d4c7;
 }
 
 .btn-outline-success:focus, 
@@ -91,7 +85,7 @@ h4 {
 
 .btn-outline-success.disabled, 
 .btn-outline-success:disabled {
-    color: #c2c2d6;
+    color: #e0dcd3;
     background-color: transparent;
 }
 
@@ -99,8 +93,8 @@ h4 {
 .btn-outline-success:not(:disabled):not(.disabled).active,
 .show > .btn-outline-success.dropdown-toggle {
   color: #fff;
-  background-color: #c2c2d6;
-  border-color: #c2c2d6;
+  background-color: #e0dcd3;
+  border-color: #e0dcd3;
 }
 
 .btn-outline-success:not(:disabled):not(.disabled):active:focus, 
@@ -112,14 +106,14 @@ h4 {
 
 .btn-primary {
     color: #fff;
-    background-color: #c2c2d6;
-    border-color: #9494b8;
+    background-color: #e0dcd3;
+    border-color: #e0dcd3;
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #c2c2d6;
-    border-color: #9494b8;
+    background-color: #d9d4c7;
+    border-color: #d9d4c7;
 }
 
 .btn-primary:focus, 
@@ -131,16 +125,16 @@ h4 {
 .btn-primary.disabled, 
 .btn-primary:disabled {
     color: #fff;
-    background-color: #c2c2d6;
-    border-color: #9494b8;
+    background-color: #e0dcd3;
+    border-color: #e0dcd3;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, 
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #c2c2d6;
-    border-color: #9494b8;
+    background-color: #e0dcd3;
+    border-color: #e0dcd3;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, 
@@ -187,11 +181,8 @@ h4 {
 
 /* The Close Button */
 .closeOne, .closeTwo, .closeThree {
-    /* color: #aaa; */
     color: white;
     float: right;
-    /* font-size: 28px; */
-    /* font-weight: bold; */
 }
 
 .closeOne:hover,
@@ -203,7 +194,6 @@ cursor: pointer;
 
 .closeTwo:hover,
 .closeTwo:focus {
-/* color: #737373; */
 color: white;
 text-decoration: none;
 cursor: pointer;
@@ -225,16 +215,15 @@ button {
 }
 
 .modal-btn {
-    background-color: #c2c2d6;
-    background: #c2c2d6;
-    border: #9494b8 1px solid;
+    background-color: #e0dcd3;
+    background: #e0dcd3;
+    border: #e0dcd3 1px solid;
     padding: 5px 10px;
-    /* display: inline-block; */
 }
 
 .modal-btn:hover{
-    background-color: #9494b8;
-    border-color: #9494b8;
+    background-color: #d9d4c7;
+    border-color: #d9d4c7;
 }
 
 /* ---------  GALLERY  --------- */
@@ -244,8 +233,6 @@ button {
     background-size: cover;
     padding-top: 50px;
     padding-bottom: 90px;
-    /* height: 70vh;
-    width: 100%; */
 }
 
 .insta-link {
@@ -290,7 +277,6 @@ button {
 
 .carousel-item {
     height: 40vh;
-    /* padding-top: 4rem; */
     padding: 4rem 0;
 }
 
@@ -330,8 +316,6 @@ button {
 
 .carousel-indicators li {
     width: 10px;
-   /* height: 10px;
-    border-radius: 100%;  */
     background-color: black;
   }
 
@@ -350,14 +334,14 @@ button {
 
 .btn-primary {
     color: #fff;
-    background-color: #c2c2d6;
-    border-color: #9494b8;
+    background-color: #e0dcd3;
+    border-color: #e0dcd3;
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #9494b8;
-    border-color: #9494b8;
+    background-color: #d9d4c7;
+    border-color: #d9d4c7;
 }
 
 @media screen and (min-width: 700px) {
@@ -372,9 +356,6 @@ button {
     h4 {
         font-size: 1.4rem;
     }
-    /* #testimonials {
-        height: 60vh;
-    } */
     #testimonials > h2 {
         font-size: 72px;
     }
@@ -402,8 +383,5 @@ button {
     .modal {
         margin-top: 0px;
     }
-    /* #testimonials {
-        height: 60vh;
-    } */
 }
 
