--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h4 {
 .nav-item {
     text-transform: uppercase;
     font-size: 1rem;
+    letter-spacing: 1px;
 }
 
 .navbar {
@@ -347,7 +348,7 @@ button {
 
 @media screen and (min-width: 700px) {
     .nav-item {
-        font-size: 0.75rem;
+        font-size: 0.8rem;
     }
 
     .jumbotron {
@@ -373,7 +374,7 @@ button {
 
 
 
-@media screen and (min-width: 870px) {
+@media screen and (min-width: 900px) {
     .nav-item {
         font-size: 1rem;
     }
