optimized images and removed unnecessary instafeed tags and scripts to increase page performance

--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ button {
 /* ---------  GALLERY  --------- */
 #gallery {
     background-position: center;
-    background-image: url("img/gallery-background2.jpg");
+    background-image: url("img/gallery-background.jpg");
     background-size: cover;
     padding-top: 50px;
     padding-bottom: 90px;
